--- a/soderlunds/public/index.html
+++ b/soderlunds/public/index.html
@@ -6,8 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/Logo_Favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Söderlunds plattsättning AB, utför arbeten i Roslagen & Norrort!" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo_Favicon.jpg" />
+  <meta name="keywords" content="Plattsättning, renovering, badrumsrenovering, kakel, hantverk, Norrtälje, Rimbo, Roslagen, Norrort, köksrenovering, klinker">
+  <meta name=”robots” content="index, follow">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
